# RetailChatbot

./: .env  README.md  main.py  pyproject.toml  requirements.txt
app/api/: routes.py
app/core/: config.py  logger.py
app/db/: database.py
app/services/: llm_service.py  sql_service.py  validation.py
app/utils/: helper.py
frontend/: ui.py
